# CMakeList.txt : projet CMake pour PrimeNumbers, incluez la source et définissez
# la logique spécifique au projet ici.
#
cmake_minimum_required (VERSION 3.8)

project ("PrimeNumbers")

# Ajoutez une source à l'exécutable de ce projet.
add_executable (PrimeNumbers "PrimeNumbers.cpp" "PrimeNumbers.h")

# TODO: Ajoutez des tests et installez des cibles si nécessaire.
